Add logo and navigation bar - self try before Walkthrough

--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	
+	<div class="navigation">
+		<img src="img/karma-logo copy.svg" class="logo">
+		<ul class="navigation-menu">
+			<li>Meet Karma</li>
+			<li>How it Works</li>
+			<li>Store</li>
+			<li>Blog</li>
+			<li>Help</li>
+			<li>Login</li>
+		</ul>
+	</div>
+	<div class="filler">
+		<img src="img/mountainWSun.jpeg" alt="Mountains with the Sunset behind them">
+	</div>
 </body>
 </html>
