--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<div class="navigation">
-		<img src="img/karma-logo copy.svg" class="logo">
-		<ul class="navigation-menu">
-			<li>Meet Karma</li>
-			<li>How it Works</li>
-			<li>Store</li>
-			<li>Blog</li>
-			<li>Help</li>
-			<li>Login</li>
-		</ul>
-	</div>
+	<nav class="top-navigation">
+		<div class="content">
+			<img src="img/karma-logo copy.svg" class="logo" alt="Karma Logo" width="26px">
+			<!-- <ul class="navigation-menu">
+				<li>Meet Karma</li>
+				<li>How it Works</li>
+				<li>Store</li>
+				<li>Blog</li>
+				<li>Help</li>
+				<li>Login</li>
+			</ul> -->
+		</div>
+	</nav>
+
 	<div class="filler">
 		<img src="img/mountainWSun.jpeg" alt="Mountains with the Sunset behind them">
 	</div>
