Add menu links, add font, float links right, add active state for Meet Karma

--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Karma</title>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<nav class="top-navigation">
 		<div class="content">
 			<img src="img/karma-logo copy.svg" class="logo" alt="Karma Logo" width="26px">
-			<!-- <ul class="navigation-menu">
-				<li>Meet Karma</li>
+			<ul class="links">
+				<li class="active">Meet Karma</li>
 				<li>How it Works</li>
 				<li>Store</li>
 				<li>Blog</li>
 				<li>Help</li>
 				<li>Login</li>
-			</ul> -->
+			</ul>
 		</div>
 	</nav>
 
-	<div class="filler">
+	<!-- <div class="filler">
 		<img src="img/mountainWSun.jpeg" alt="Mountains with the Sunset behind them">
-	</div>
+	</div> -->
 </body>
 </html>
