--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 		</div>
 	</nav>
 
-	<!-- <div class="filler">
-		<img src="img/mountainWSun.jpeg" alt="Mountains with the Sunset behind them">
-	</div> -->
+	<div class="filler">
+		<!-- <img src="img/mountainWSun.jpeg" alt="Mountains with the Sunset behind them"> -->
+	</div>
 </body>
 </html>
