--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
 	<nav class="top-navigation">
 		<div class="content">
-			<img src="img/karma-logo copy.svg" class="logo" alt="Karma Logo" width="26px">
 			<ul class="links">
 				<li class="active">Meet Karma</li>
 				<li>How it Works</li>
@@ -18,11 +17,15 @@
 				<li>Help</li>
 				<li>Login</li>
 			</ul>
+			<img src="img/karma-logo copy.svg" class="logo" alt="Karma Logo" width="26px">
 		</div>
 	</nav>
-
-	<div class="filler">
-		<!-- <img src="img/mountainWSun.jpeg" alt="Mountains with the Sunset behind them"> -->
+	
+	<section class="introduction">
+	<div class="content">
+		<h1>Introducing Karma</h1>
+		<h3>Bring WiFi with you, everywhere you go</h3>
+		<button class="button"> Learn More </button>
 	</div>
 </body>
 </html>
