Get the button in the middle with the headers of the introduction above it

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<nav class="top-navigation">
-		<div class="content">
+	<nav class="top-navigation .group">
+		<div class="content .group">
 			<ul class="links">
 				<li class="active">Meet Karma</li>
 				<li>How it Works</li>
