--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<div class="content">
 		<h1>Introducing Karma</h1>
 		<h3>Bring WiFi with you, everywhere you go</h3>
-		<button class="button"> Learn More </button>
+		<button class="big-button"> Learn More </button>
 	</div>
 </body>
 </html>
