--- a/index.html
+++ b/index.html
@@ -17,15 +17,42 @@
 				<li>Help</li>
 				<li>Login</li>
 			</ul>
-			<img src="img/karma-logo copy.svg" class="logo" alt="Karma Logo" width="26px">
+			<img src="img/karma-logo.svg" class="logo" alt="Karma Logo" width="26px">
 		</div>
 	</nav>
 	
 	<section class="introduction">
-	<div class="content">
-		<h1>Introducing Karma</h1>
-		<h3>Bring WiFi with you, everywhere you go</h3>
-		<button class="big-button"> Learn More </button>
-	</div>
+		<div class="content">
+			<h1>Introducing Karma</h1>
+			<h3>Bring WiFi with you, everywhere you go</h3>
+			<button class="big-button"> Learn More </button>
+		</div>
+	</section>
+
+	<section class="cases">
+		<div class="content">
+			<h2>Everyone needs a little Karma</h2>
+			<ul class="devices">
+				<li><img src="img/icon-devices.svg" alt="Devices icon">
+					<div class="caption">
+						<h3>Internet for all devices</h3>
+					</div>
+				</li>
+				<li><img src="img/icon-coffee.svg" alt="Coffee icon">
+					<div class="caption">
+						<h3>Boost your productivity</h3>
+					</div>
+				</li>
+				<li><img src="img/icon-refill.svg" alt="Refill gas station icon">
+					<div class="caption">
+						<h3>Pay as you go</h3>
+					</div>
+				</li>
+			</ul>
+
+		</div>
+
+	</section>
+
 </body>
 </html>
