Add footer section with social icons from font-awesome

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Karma</title>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
+<!-- 	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+<link rel="stylesheet" href="fonts/font-awesome-4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -51,8 +54,27 @@
 			</ul>
 
 		</div>
-
 	</section>
 
+	<footer class="social">
+		<div class="content">
+			<hr>
+			<h5> Join us on</h5>
+			<ul class="icons">
+				<li class="twitter">
+					<span class="fa fa-twitter"></span>
+				</li>
+				<li class="facebook"> 
+					<span class="fa fa-facebook"></span>
+				</li>
+				<li class="instagram">
+					<span class="fa fa-instagram"></span>
+				</li>
+			</ul>
+			<span class="copy">
+				&copy; Karma Mobility, Inc
+			</span>
+		</div>
+	</footer>
 </body>
 </html>
