Add anchor elements for social icons, add webkit prefixes for flex-box properties

--- a/index.html
+++ b/index.html
@@ -63,13 +63,19 @@
 			<h5> Join us on</h5>
 			<ul class="icons">
 				<li class="twitter">
-					<span class="fa fa-twitter"></span>
+					<a href="#">
+						<span class="fa fa-twitter"></span>
+					</a>
 				</li>
 				<li class="facebook"> 
-					<span class="fa fa-facebook"></span>
+					<a href="#">
+						<span class="fa fa-facebook"></span>
+					</a>
 				</li>
 				<li class="instagram">
-					<span class="fa fa-instagram"></span>
+					<a href="#">
+						<span class="fa fa-instagram"></span>
+					</a>
 				</li>
 			</ul>
 			<span class="copy">
